Added City, DocumentType, EmergencyContact, Gender, Guest models

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "HotelAdmin": "@\"Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=HotelAdmin;\""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
