--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "HotelAdmin": "@\"Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=HotelAdmin;\""
+    "HotelAdmin": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=HotelAdmin;"
   },
   "Logging": {
     "LogLevel": {
